# shuttlings-cch24

./: .env  Cargo.toml  Shuttle.toml
.sqlx/: query-330822d70e2cdb144fa42d9d7b9cd11780fafecce247b8e93eeb7c1252dd7c4f.json  query-3e07e707fb845745acd154dd7f15af004d780137fcc64261f6d83874885966a0.json  query-445e2280a7a844bce2e925b1607559fe37d45100170b9b81f1014906b95a09fd.json  query-a67aa2748f45a08c6926590b26954b2bfed7166ce17cdfa1249e38dc7c0dddf5.json  query-b88c59ba7d8a45310510d28107e0e9833656eb2b2dddf88c402a6275c066d43c.json
migrations/: 19_init.sql
src/: main.rs
src/service/: day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  mod.rs
